@startuml
'https://plantuml.com/class-diagram

interface UsersDao{
    getAllUsers():ArrayList<User>
    addUser(User user):void
    deleteUser(int rate):boolean
}

class User{
    - user:NameString
    - time:Date
    - score:int
    - rate:int

    + User(String userName, int score)
    + compareTo(User o):int
    + getUserName():String
    + getTime():String
    + getScore():int
    + getRate():int
    + setRate(int rate):void
    + equals(Object o):boolean
    + hashCode():int
}

class UsersDaoImpl{
    - users:TreeSet<User>
    - path:String

    - readInData():void
    - writeBackData():void
    + addUser(User user):void
    + deleteUser(int rate):boolean
    + getAllUsers():ArrayList<User>
}

UsersDao <|.. UsersDaoImpl
User <-- UsersDaoImpl

@enduml